# tbcv

./: .gitignore  .maintenance_mode  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXECUTIVE_SUMMARY.md  MIGRATION_COMPLETION_REPORT.md  MIGRATION_LOG.md  PRODUCTION_ENHANCEMENT_COMPLETE.md  QUICK_FIX_ENHANCEMENT_BUG.md  README.md  README_original.md  SERVER_STATUS.md  SETUP_GUIDE.md  SYSTEM_TIDINESS_REPORT.md  TBCV_SYSTEM_ANALYSIS.md  TESTING.md  VERSION.txt  WEBSOCKET_403_INVESTIGATION.md  WEBSOCKET_FIX_COMPLETE.md  __init__.py  __main__.py  alembic.ini  check_all_recs.py  check_schema.py  cleanup_root_db.bat  delete_redundant_docs.sh  diagnose.py  docker-compose.yml  init.py  install.sh  main.py  pyproject.toml  pytest.ini  quick_test.py  requirements.md  requirements.txt  restart_server.bat  rule_manager.py  run.bat  (+16 more)
.claude/: settings.local.json
agents/: __init__.py  base.py  code_analyzer.py  content_enhancer.py  content_validator.py  edit_validator.py  enhancement_agent.py  enhancement_history.py  enhancement_preview.py  fuzzy_detector.py  llm_validator.py  orchestrator.py  recommendation_agent.py  recommendation_critic.py  recommendation_enhancer.py  truth_manager.py
api/: additional_endpoints.py  audit_endpoints.py  dashboard.py  enhancement_endpoints.py  error_handlers.py  export_endpoints.py  mcp_helpers.py  mcp_integration_example.py  server.py  server_extensions.py  server_temp.py  websocket_endpoints.py
cli/: main.py  mcp_helpers.py  mcp_helpers_example.py
config/: access_guards.yaml  agent.yaml  cache.yaml  code.yaml  enhancement.yaml  frontmatter.yaml  heading_sizes.yaml  links.yaml  llm.yaml  main.yaml  markdown.yaml  perf.json  rag.yaml  reflection.yaml  seo.yaml  structure.yaml  tone.json  truth.yaml  validation_flow.yaml
core/: __init__.py  __main__.py  access_guard.py  audit_logger.py  cache.py  checkpoint_manager.py  config.py  config_loader.py  database.py  embeddings.py  error_formatter.py  export_utils.py  family_detector.py  file_utils.py  import_guard.py  ingestion.py  io_win.py  language_utils.py  logging.py  maintenance_manager.py  ollama.py  path_validator.py  performance.py  performance_tracker.py  prompt_loader.py  rule_manager.py  startup_checks.py  utilities.py  validation_store.py  validator_router.py  vector_store.py  workflow_manager.py
data/: tbcv.db
docs/: MCP_ENDPOINT_MIGRATION_TASK016.md  MCP_MIGRATION_SUMMARY_TASK016.md  TASK-018-PERFORMANCE-REPORT.md  TASK-LOW-003-COMPLETION-REPORT.md  access_guard.md  access_guard_quick_reference.md  admin_api.md  agents.md  api_examples.md  api_reference.md  architecture.md  backup_recovery.md  checkpoints.md  cli_guide.md  cli_mcp_helpers.md  cli_usage.md  code_examples.md  configuration.md  database_schema.md  deployment.md  deployment_checklist.md  development.md  enhancement_workflow.md  faq.md  feature_flag_interactions.md  (+32 more)
(+519 files in other folders)
